fix info z-index

--- a/src/sass/info.scss
+++ b/src/sass/info.scss
@@ -12,7 +12,7 @@
         flex-direction: row ;
         position: sticky;
         top:100px;
-        z-index: 5;
+        z-index: 2;
         border-bottom: 5px solid $colorDark ;
         // border: 3px solid orchid;
         
